# polybench

./: .clang-format  .cliff.toml  .cspell.json  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CPPLINT.cfg  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh  setup.cfg
.chglog/: config.yml
.github/: dependabot.yml
.github/workflows/: bench.yml  dependency-submission.yml  lint.yml  release.yml  test.yml
polybench/: __init__.py  __main__.py  main.py  plot.py  poly.py  prob.py  solver.py  util.py  version.py
polybench/solvers/: __init__.py  fer.py  flint.py  form.py  mma.py  reform.py  rings.py  singular.py  symbolica.py
polybench/solvers/flint/: CMakeLists.txt  main.c  vcpkg.json  version.h.in
polybench/solvers/flint/cmake/: init-vcpkg.cmake
polybench/solvers/flint/ports/flint/: portfile.cmake  vcpkg.json
polybench/solvers/reform/: Cargo.toml
polybench/solvers/reform/src/: main.rs
polybench/solvers/rings/: build.gradle
polybench/solvers/rings/src/main/java/com/github/tueda/polybench/rings/: App.java
polybench/solvers/symbolica/: Cargo.toml
polybench/solvers/symbolica/src/: main.rs
scripts/: generate-release-notes.sh  log2mdtbl.py  make-release.sh  poetry2pip.py
scripts/benchmark/: 0.2.0.sh  0.3.0.sh  _base.bash
tests/: test_poly.py
