[tool.poetry]
name = "polybench"
version = "0.1.0"
description = "Multivariate polynomial arithmetic benchmark tests."
license = "MIT"
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]
readme = "README.md"
repository = "https://github.com/tueda/polybench"
keywords = ["benchmark", "mathematics", "multivariate-polynomials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: System :: Benchmark",
]

[tool.poetry.dependencies]
python = "^3.6.1"

colorama = "^0.4.4"
colorlog = "^4.6.2"
importlib-metadata = "^3.3.0"
importlib-resources = "^4.1.1"
matplotlib = "^3.3.3"
pandas = "^1.1.5"  # 1.2.0 requires python >= 3.7.1
pretty-errors = "^1.2.19"
psutil = "^5.8.0"
py-cpuinfo = "^7.0.0"
symengine = "^0.6.1"
toml = "^0.10.2"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
polybench = "polybench.__main__:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = [
    "--cov-report=html",
    "--cov-report=term",
    "--cov=polybench",
    "--doctest-modules",
]
