[tool.poetry]
name = "polybench"
version = "0.2.0rc1"
description = "Multivariate polynomial arithmetic benchmark tests."
license = "MIT"
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]
readme = "README.md"
repository = "https://github.com/tueda/polybench"
keywords = ["benchmark", "mathematics", "multivariate-polynomials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: System :: Benchmark",
]

[tool.poetry.dependencies]
python = "^3.6.1"

colorama = "^0.4.4"
colorlog = "^6.6.0"
importlib-metadata = "^4.8.3"  # 4.9.0 requires python >= 3.7
importlib-resources = "^5.4.0"
matplotlib = "^3.3.4"  # 3.4.0 requires python >= 3.7
pandas = "^1.1.5"  # 1.2.0 requires python >= 3.7.1
pretty-errors = "^1.2.25"
psutil = "^5.8.0"
py-cpuinfo = "^8.0.0"
symengine = "^0.8.1"
toml = "^0.10.2"
typing-extensions = "^4.0.1"

kiwisolver = [
    { version = "1.3.1", python = "~3.6.1" },
    { version = "^1.3.2", python = ">=3.7,<3.11" },  # for wheel
]
numpy = [
    { version = "~1.19.5", python = "~3.6.1" },
    { version = "^1.21.5", python = ">=3.7,<3.11" },  # for wheel
]
tomli = "^1.2.3"  # required by Coverage.py, 2.0.0 requires python >= 3.7

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
polybench = "polybench.__main__:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = [
    "--cov-report=html",
    "--cov-report=term",
    "--cov=polybench",
    "--doctest-modules",
]
