[tool.poetry]
name = "polybench"
version = "0.3.2"
description = "Multivariate polynomial arithmetic benchmark tests."
license = "MIT"
authors = ["Takahiro Ueda <t.ueda.od@juntendo.ac.jp>"]
readme = "README.md"
repository = "https://github.com/tueda/polybench"
keywords = ["benchmark", "mathematics", "multivariate-polynomials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: System :: Benchmark",
]

[tool.poetry.dependencies]
python = "^3.6.1"

colorama = "^0.4.5"  # 0.4.6 requires python >= 3.7
colorlog = "^6.9.0"
importlib-metadata = "^4.8.3"  # 4.9.0 requires python >= 3.7
importlib-resources = "^5.4.0"  # 5.6.0 requires python >= 3.7
pretty-errors = "^1.2.25"
psutil = "^7.0.0"
py-cpuinfo = "^9.0.0"
toml = "^0.10.2"
typing-extensions = "^4.1.1"  # 4.2.0 requires python >= 3.7

kiwisolver = [
    { version = "~1.3.1", python = "~3.6.1" },
    { version = "^1.4.5", python = ">=3.7,<3.14" },
]
symengine = [
    { version = "~0.8.1", python = "~3.6.1" },
    { version = "~0.10.0", python = ">=3.7,<3.8" },
    { version = "^0.13.0", python = ">=3.8,<3.14" },
]
matplotlib = [
    { version = "~3.3.4", python = "~3.6.1" },
    { version = "~3.5.3", python = ">=3.7,<3.11" },
    { version = "^3.9.0", python = ">=3.11,<3.14" },
]
numpy = [
    { version = "~1.19.5", python = "~3.6.1" },
    { version = "~1.21.6", python = ">=3.7,<3.11" },
    { version = "^2.0.0", python = ">=3.11,<3.14" },
]
pandas = [
    { version = "~1.1.5", python = ">=3.6.1,<3.7.1" },
    { version = "~1.3.5", python = ">=3.7.1,<3.11" },
    { version = "^2.2.2", python = ">=3.11,<3.14" },
]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"  # 7.1.0 requires python >= 3.7
pytest-cov = "^4.0.0"  # 4.1.0 requires python >= 3.7

tomli = "^1.2.3"  # required by Coverage.py, 2.0.0 requires python >= 3.7

coverage = [
    { version = "~6.2", python = "~3.6.1" },
    { version = "^7.2.7", python = ">=3.7" },  # Python 3.11 doesn't work with coverage 6.2
]

[tool.poetry.scripts]
polybench = "polybench.__main__:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = [
    "--cov-report=html",
    "--cov-report=term",
    "--cov=polybench",
    "--doctest-modules",
]
